--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,8 @@ body {
   gap: 8px;
   align-items: end;
   margin-bottom: 10px;
+  width: 1000px;
+  justify-content: space-between;
 }
 
 .input-box {
@@ -38,7 +40,37 @@ label {
   font-weight: 700;
 }
 
+input {
+  padding: 10px;
+  border: 1px solid #bebebe;
+  border-radius: 3px;
+}
+
 .buttons {
   display: flex;
   gap: 8px;
+  height: 37px;
+}
+
+.table {
+  width: 1000px;
+  text-align: center;
+  border-radius: 7px;
+  border-collapse: collapse;
+  overflow: hidden;
+}
+
+thead {
+  background-color: #00347e;
+  color: #ffffff;
+}
+
+tbody {
+  background-color: #f4f3fa;
+}
+
+th,
+td {
+  border-bottom: 1px solid #bebebe;
+  padding: 10px;
 }
